refactor: 배포 URL 환경 변수화 및 스프링 설정 클래스 등록